k8s/network-test/allow-hardened-service.yaml
apiVersion: v1
kind: Pod
metadata:
  name: allow-hardened-service
  namespace: hardened

spec:
  serviceAccountName: network-test-sa
  restartPolicy: Never

  securityContext:
    runAsNonRoot: true
    runAsUser: 1000
    seccompProfile:
      type: RuntimeDefault

  containers:
    - name: curl
      image: curlimages/curl:8.8.0

      securityContext:
        allowPrivilegeEscalation: false
        readOnlyRootFilesystem: true

        capabilities:
          drop:
            - ALL

      resources:
        requests:
          cpu: 50m
          memory: 64Mi
        limits:
          cpu: 100m
          memory: 128Mi

      volumeMounts:
        - name: tmp
          mountPath: /tmp

      command:
        - sh
        - -c
        - |
          curl --fail --connect-timeout 5 \
            http://hardened-nginx.hardened.svc.cluster.local

  volumes:
    - name: tmp
      emptyDir: {}
