k8s/network-test/allow-web.yaml
apiVersion: v1
kind: Pod
metadata:
  name: allowed-web
  namespace: hardened

spec:
  restartPolicy: Never

  securityContext:
    runAsNonRoot: true
    runAsUser: 65532
    seccompProfile:
      type: RuntimeDefault

  containers:
    - name: curl
      image: curlimages/curl:8.8.0

      command:
        - sleep
        - infinity
        - sh
        - -c
        - |
          curl http://hardened-nginx.hardened.svc.cluster.local

      securityContext:
        allowPrivilegeEscalation: false
        readOnlyRootFilesystem: true
        capabilities:
          drop:
            - ALL
