k8s/network-test/illegal-db-access.yaml
apiVersion: v1
kind: Pod
metadata:
  name: illegal-db-access
  namespace: hardened
spec:
  restartPolicy: Never
  containers:
    - name: curl
      image: curlimages/curl:8.8.0
      command:
        - sh
        - -c
        - |
          nc -zv db-service.database.svc.cluster.local 5432
