k8s/network-test/shell-test.yaml
apiVersion: v1
kind: Pod
metadata:
  name: shell-test
  namespace: hardened
spec:
  containers:
  - name: shell
    image: busybox
    command:
      - sh
      - -c
      - |
        sh
        sleep 3600
